[package]
name = "hackclub-dns-fetcher"
version = "0.1.0"
edition = "2021"
authors = ["HackClub Contributors"]
description = "Discovers hackathons by probing HackClub DNS subdomains and analyzing content with LLM"
license = "MIT"
repository = "https://github.com/thelorax67/HackClub-Events-Radar"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]

[dependencies]
reqwest  = { version = "0.12", features = ["json"] }
serde    = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
futures  = "0.3"
tokio    = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono   = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
